--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,15 +18,15 @@ a {
 .places-container {
   position: absolute;
   top: 10px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 2rem;
   z-index: 10;
   width: 300px;
 }
 
 .map-container {
-  width: 100%;
+  width: 60%;
   height: 100vh;
+  float: right;
 }
 
 .combobox-input {
